--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Rene_Z's Personal Repo</h1>
-<p>Click the following link to add this repo to Cydia: <a href="https://cydia.saurik.com/api/share#?source=http://renezeidler.github.io/cydia/">http://renezeidler.github.io/cydia/</a></p>
+<p>Click the following link to add this repo to Cydia: <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://renezeidler.github.io/cydia/">http://renezeidler.github.io/cydia/</a></p>
 </body>
 </html>
