Fix depic in Cydia

--- a/depic/de.rene-zeidler.ponymotes-for-alienblue/index.html
+++ b/depic/de.rene-zeidler.ponymotes-for-alienblue/index.html
@@ -2,7 +2,12 @@
 <html>
 <head>
 	<title>Ponymotes for AlienBlue</title>
+	<base target="_blank"/>
 	<link rel="stylesheet" type="text/css" href="../../assets/css/depic.css"/>
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+	<meta name="description" content="A tweak that adds Ponymote support to AlienBlue for iOS" />
+	<meta name="keywords" content="iPhone, MLP, My Little Pony, emotes, ponymotes, AlienBlue, Jailbreak, Tweak, BPM" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
 </head>
 <body>
 
