Pretty up index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rene_Z's Personal Repo</title>
+	<title>Rene_Z's Personal Repo</title>
+	<base target="_blank"/>
+	<link rel="stylesheet" type="text/css" href="assets/css/depic.css"/>
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+	<meta name="description" content="A tweak that adds Ponymote support to AlienBlue for iOS" />
+	<meta name="keywords" content="iPhone, MLP, My Little Pony, emotes, ponymotes, AlienBlue, Jailbreak, Tweak, BPM" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
 </head>
 <body>
-<h1>Rene_Z's Personal Repo</h1>
-<p>Click the following link to add this repo to Cydia: <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://renezeidler.github.io/cydia/">http://renezeidler.github.io/cydia/</a></p>
+
+<div class="panel">
+	<div class="fieldset">
+		<h1>Rene_Z's Personal Repo</h1>
+		<div>
+			<p>Click the following link to add this repo to Cydia: <a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://renezeidler.github.io/cydia/">http://renezeidler.github.io/cydia/</a></p>
+		</div>
+	</div>
+</div>
+<div class="panel">
+	<div class="fieldset">
+		<h2>Packages</h2>
+	</div>
+	<div class="fieldset">
+		<a class="button" href="depic/de.rene-zeidler.ponymotes-for-alienblue/index.html">Ponymotes for AlienBlue</a>
+	</div>
+</div>
+
 </body>
 </html>
