Add link to open packages in Cydia

--- a/depic/de.rene-zeidler.ponymotes-for-alienblue/index.html
+++ b/depic/de.rene-zeidler.ponymotes-for-alienblue/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 
+<div class="no-cydia panel">
+	<div class="fieldset">
+		<a class="button" href="cydia://url/https://cydia.saurik.com/api/share#?source=http://renezeidler.github.io/cydia/&package=de.rene-zeidler.ponymotes-for-alienblue">Open in Cydia</a>
+	</div>
+</div>
+<script src="../../assets/js/checkCydia.js" type="text/javascript"></script>
 <div class="panel">
 	<div class="fieldset">
 		<h2>Description</h2>
