Add package icon + higher res emotes for depic

--- a/depic/de.rene-zeidler.ponymotes-for-alienblue/index.html
+++ b/depic/de.rene-zeidler.ponymotes-for-alienblue/index.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="A tweak that adds Ponymote support to AlienBlue for iOS" />
 	<meta name="keywords" content="iPhone, MLP, My Little Pony, emotes, ponymotes, AlienBlue, Jailbreak, Tweak, BPM" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
+	<meta property="og:image" content="http://renezeidler.github.io/cydia/depic/de.rene-zeidler.ponymotes-for-alienblue/icon.png">
 </head>
 <body>
 
